@@ -9,8 +9,13 @@
 #                                        | |   | |        
 #                                        |_|   |_|
 #
-#   Template generated by rails_apps_composer. For more information, see:
+#   Application template generated by the rails_apps_composer gem.
+#   Restrain your impulse to make changes to this file; instead,
+#   make changes to the recipes in the rails_apps_composer gem.
+#   
+#   For more information, see:
 #   https://github.com/RailsApps/rails_apps_composer/
+#   
 #   Thank you to Michael Bleigh for leading the way with the RailsWizard gem.
 #
 # >---------------------------------------------------------------------------<
