@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.2.8"
+  VERSION = "2.2.9"
 end
